--- a/project2/project2/Base.lproj/Main.storyboard
+++ b/project2/project2/Base.lproj/Main.storyboard
@@ -154,45 +154,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVQ-gg-Pcf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVQ-gg-Pcf">
                                 <rect key="frame" x="20" y="88" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Edit"/>
                                 <connections>
                                     <action selector="edit:" destination="N2N-dv-QBI" eventType="touchUpInside" id="qbG-cc-yUa"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmc-rt-ry1">
-                                <rect key="frame" x="364" y="93" width="30" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="Be4-8G-WcI"/>
-                                    <constraint firstAttribute="width" constant="30" id="dVQ-zs-HHQ"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmc-rt-ry1">
+                                <rect key="frame" x="352.5" y="88" width="41.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pxx-y1-tPr">
+                                <rect key="frame" x="0.0" y="139" width="414" height="757"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="105" id="Vif-iW-Fae">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="105"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vif-iW-Fae" id="18I-tN-6jX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Wwg-8R-ZSI"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="kmc-rt-ry1" firstAttribute="top" secondItem="Wwg-8R-ZSI" secondAttribute="top" constant="7" id="ETT-aL-fse"/>
-                            <constraint firstItem="Wwg-8R-ZSI" firstAttribute="trailing" secondItem="kmc-rt-ry1" secondAttribute="trailing" constant="45" id="lkI-xT-snU"/>
+                            <constraint firstItem="pxx-y1-tPr" firstAttribute="leading" secondItem="Wwg-8R-ZSI" secondAttribute="leading" id="2qR-YA-4NC"/>
+                            <constraint firstItem="jVQ-gg-Pcf" firstAttribute="leading" secondItem="Wwg-8R-ZSI" secondAttribute="leading" constant="20" id="OLH-v2-OGi"/>
+                            <constraint firstItem="pxx-y1-tPr" firstAttribute="trailing" secondItem="Wwg-8R-ZSI" secondAttribute="trailing" id="R3Y-KN-9b6"/>
+                            <constraint firstItem="Wwg-8R-ZSI" firstAttribute="trailing" secondItem="kmc-rt-ry1" secondAttribute="trailing" constant="20" id="U6U-yr-n0g"/>
+                            <constraint firstItem="kmc-rt-ry1" firstAttribute="top" secondItem="Wwg-8R-ZSI" secondAttribute="top" id="cZa-FU-O4g"/>
+                            <constraint firstItem="jVQ-gg-Pcf" firstAttribute="top" secondItem="Wwg-8R-ZSI" secondAttribute="top" id="lke-m4-hdZ"/>
+                            <constraint firstAttribute="bottom" secondItem="pxx-y1-tPr" secondAttribute="bottom" id="m8s-iB-If7"/>
+                            <constraint firstItem="pxx-y1-tPr" firstAttribute="top" secondItem="jVQ-gg-Pcf" secondAttribute="bottom" constant="20" id="p3r-dZ-sbp"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem style="plain" systemItem="add" id="qo8-5Y-15q"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Cart" id="dUP-RA-Y6q"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="Add" destination="kmc-rt-ry1" id="7Ib-3U-bpg"/>
+                        <outlet property="shoppingCartTable" destination="pxx-y1-tPr" id="y4P-sS-x6b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="abQ-B0-EAw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="N2N-dv-QBI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-800" y="1388"/>
+            <point key="canvasLocation" x="392.75362318840581" y="1601.7857142857142"/>
         </scene>
         <!--the account-->
         <scene sceneID="dzh-A4-YP0">
@@ -329,7 +343,7 @@
                                             </subviews>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6x-h2-NX2">
-                                            <rect key="frame" x="329" y="29" width="65" height="31"/>
+                                            <rect key="frame" x="329" y="28.5" width="65" height="31"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="65" id="w3c-L6-uxF"/>
                                             </constraints>
@@ -398,7 +412,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rj3-oh-eFh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5113" y="3209"/>
+            <point key="canvasLocation" x="5119" y="3408"/>
         </scene>
         <!--the account-->
         <scene sceneID="IUL-9G-AWp">
@@ -440,8 +454,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Sxh-Es-mPo"/>
-        <segue reference="xj4-lv-tDs"/>
+        <segue reference="Zjg-0e-Iwh"/>
+        <segue reference="bUr-Wj-qfW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="cart" catalog="system" width="128" height="102"/>
