--- a/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
+++ b/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oYW-kZ-9Ks">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1KZ-rM-JCL">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -24,7 +24,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="520px-Chocolate" translatesAutoresizingMaskIntoConstraints="NO" id="0kg-Bw-OrX">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="520px-Chocolate" translatesAutoresizingMaskIntoConstraints="NO" id="0kg-Bw-OrX">
                                             <rect key="frame" x="20" y="23" width="76" height="69"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="69" id="4om-Np-rby"/>
@@ -201,22 +201,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="shoppingCartCell" textLabel="DEW-uY-yZh" style="IBUITableViewCellStyleDefault" id="LBD-JR-iM4">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="10" reuseIdentifier="shoppingCartCell" rowHeight="114" id="Gcx-Ul-Ote" customClass="ProductCell" customModule="PROJECT_2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="114"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LBD-JR-iM4" id="6kc-fo-cO0">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gcx-Ul-Ote" id="2Wk-ZU-JpA">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DEW-uY-yZh">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="520px-Chocolate" translatesAutoresizingMaskIntoConstraints="NO" id="Xda-sD-fei">
+                                            <rect key="frame" x="20" y="23" width="76" height="69"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="69" id="3LB-mr-xCw"/>
+                                                <constraint firstAttribute="width" constant="76" id="CWJ-ER-hpI"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2L7-fR-pNw">
+                                            <rect key="frame" x="104" y="29" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="2L7-fR-pNw" firstAttribute="top" secondItem="2Wk-ZU-JpA" secondAttribute="topMargin" constant="18" id="76q-KE-OTU"/>
+                                        <constraint firstItem="2L7-fR-pNw" firstAttribute="leading" secondItem="Xda-sD-fei" secondAttribute="trailing" constant="8" symbolic="YES" id="cst-0A-6Ei"/>
+                                        <constraint firstItem="Xda-sD-fei" firstAttribute="leading" secondItem="2Wk-ZU-JpA" secondAttribute="leadingMargin" id="ocI-8t-ZOl"/>
+                                        <constraint firstItem="Xda-sD-fei" firstAttribute="top" secondItem="2Wk-ZU-JpA" secondAttribute="topMargin" constant="12" id="ygX-Ld-Hwi"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameProduct" destination="2L7-fR-pNw" id="OUi-Uw-eXd"/>
+                                    <outlet property="productImage" destination="Xda-sD-fei" id="4XH-Ua-nRb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -228,7 +244,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z63-Tb-AZc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1658" y="792"/>
+            <point key="canvasLocation" x="1657.9710144927537" y="791.51785714285711"/>
         </scene>
         <!--profile-->
         <scene sceneID="EPq-u4-m3o">
@@ -267,7 +283,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="images-7" translatesAutoresizingMaskIntoConstraints="NO" id="DmJ-Nm-cRV">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unknown" translatesAutoresizingMaskIntoConstraints="NO" id="DmJ-Nm-cRV">
                                                     <rect key="frame" x="20" y="0.0" width="89" height="65"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="65" id="QOF-lg-Q2d"/>
@@ -296,7 +312,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="gbR-hS-sfh">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="gbR-hS-sfh">
                                                     <rect key="frame" x="20" y="0.0" width="89" height="65"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="65" id="bdB-PA-NZy"/>
@@ -325,7 +341,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unknown-1" translatesAutoresizingMaskIntoConstraints="NO" id="rzL-K8-zZU">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unknown-1" translatesAutoresizingMaskIntoConstraints="NO" id="rzL-K8-zZU">
                                                     <rect key="frame" x="20" y="0.0" width="89" height="65"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="89" id="Csi-3k-gJl"/>
@@ -446,10 +462,10 @@
     </scenes>
     <resources>
         <image name="520px-Chocolate" width="520" height="405"/>
+        <image name="Unknown" width="225" height="225"/>
         <image name="Unknown-1" width="174" height="290"/>
         <image name="folder.circle.fill" catalog="system" width="128" height="121"/>
         <image name="images-1" width="299" height="168"/>
-        <image name="images-7" width="368" height="137"/>
         <image name="list.bullet" catalog="system" width="128" height="88"/>
         <image name="map" width="754" height="682"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
